--- a/lib/l10n/intl_be.arb
+++ b/lib/l10n/intl_be.arb
@@ -2392,7 +2392,7 @@
   "playWithAI": "Пакуль гуляйце з ШІ",
   "courseStartDesc": "Pangea Bot гатовы да працы ў любы час!\n\n...але навучанне лепш з сябрамі!",
   "@@locale": "be",
-  "@@last_modified": "2025-12-12 14:56:19.028442",
+  "@@last_modified": "2026-01-06 13:01:53.730932",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -13010,6 +13010,16 @@
     }
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "activitiesToUnlockTopicTitle": "Дзеянні для адкрыцця наступнай тэмы",
+  "activitiesToUnlockTopicDesc": "Усталюйце колькасць дзеянняў для адкрыцця наступнай тэмы курса",
+  "@activitiesToUnlockTopicTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitiesToUnlockTopicDesc": {
     "type": "String",
     "placeholders": {}
   }
