--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5343,5 +5343,7 @@
   "introChatDesc": "Anyone in the space can post.",
   "announcementsChatTitle": "Announcements Chat",
   "announcementsChatDesc": "Only space admin can post.",
-  "inOngoingActivity": "You have an ongoing activity!"
+  "inOngoingActivity": "You have an ongoing activity!",
+  "activitiesToUnlockTopicTitle": "Activities to Unlock Next Topic",
+  "activitiesToUnlockTopicDesc": "Set the number of activities to unlock the next course topic"
 }
