--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-12 14:56:00.087346",
+  "@@last_modified": "2026-01-06 13:01:26.266378",
   "about": "Sobre",
   "@about": {
     "type": "String",
@@ -12269,6 +12269,16 @@
     }
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "activitiesToUnlockTopicTitle": "Atividades para Desbloquear o Próximo Tópico",
+  "activitiesToUnlockTopicDesc": "Defina o número de atividades para desbloquear o próximo tópico do curso",
+  "@activitiesToUnlockTopicTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitiesToUnlockTopicDesc": {
     "type": "String",
     "placeholders": {}
   }
