--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ru",
-  "@@last_modified": "2025-12-12 14:57:07.862319",
+  "@@last_modified": "2026-01-06 13:02:42.875671",
   "about": "О проекте",
   "@about": {
     "type": "String",
@@ -12016,6 +12016,16 @@
     }
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "activitiesToUnlockTopicTitle": "Деятельности для разблокировки следующей темы",
+  "activitiesToUnlockTopicDesc": "Установите количество действий для разблокировки следующей темы курса",
+  "@activitiesToUnlockTopicTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitiesToUnlockTopicDesc": {
     "type": "String",
     "placeholders": {}
   }
