--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "uk",
-  "@@last_modified": "2025-12-12 14:56:13.994412",
+  "@@last_modified": "2026-01-06 13:01:42.034870",
   "about": "Про застосунок",
   "@about": {
     "type": "String",
@@ -11905,6 +11905,16 @@
     }
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "activitiesToUnlockTopicTitle": "Дії для розблокування наступної теми",
+  "activitiesToUnlockTopicDesc": "Встановіть кількість дій для розблокування наступної теми курсу",
+  "@activitiesToUnlockTopicTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitiesToUnlockTopicDesc": {
     "type": "String",
     "placeholders": {}
   }
