--- a/lib/l10n/intl_yue.arb
+++ b/lib/l10n/intl_yue.arb
@@ -2341,7 +2341,7 @@
   "selectAll": "全選",
   "deselectAll": "取消全選",
   "@@locale": "yue",
-  "@@last_modified": "2025-12-12 14:56:10.080732",
+  "@@last_modified": "2026-01-06 13:01:38.057632",
   "@ignoreUser": {
     "type": "String",
     "placeholders": {}
@@ -13002,6 +13002,16 @@
     }
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "activitiesToUnlockTopicTitle": "解鎖下一主題的活動",
+  "activitiesToUnlockTopicDesc": "設置解鎖下一課程主題所需的活動數量",
+  "@activitiesToUnlockTopicTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitiesToUnlockTopicDesc": {
     "type": "String",
     "placeholders": {}
   }
