--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "zh",
-  "@@last_modified": "2025-12-12 14:56:47.615356",
+  "@@last_modified": "2026-01-06 13:02:25.686469",
   "about": "关于",
   "@about": {
     "type": "String",
@@ -11902,6 +11902,16 @@
     }
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "activitiesToUnlockTopicTitle": "解锁下一个主题的活动",
+  "activitiesToUnlockTopicDesc": "设置解锁下一个课程主题所需的活动数量",
+  "@activitiesToUnlockTopicTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitiesToUnlockTopicDesc": {
     "type": "String",
     "placeholders": {}
   }
