--- a/lib/l10n/intl_zh_Hant.arb
+++ b/lib/l10n/intl_zh_Hant.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-12 14:56:26.718989",
+  "@@last_modified": "2026-01-06 13:02:01.182495",
   "about": "關於",
   "@about": {
     "type": "String",
@@ -11909,6 +11909,16 @@
     }
   },
   "@inOngoingActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "activitiesToUnlockTopicTitle": "解鎖下一主題的活動",
+  "activitiesToUnlockTopicDesc": "設定解鎖下一課程主題所需的活動數量",
+  "@activitiesToUnlockTopicTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activitiesToUnlockTopicDesc": {
     "type": "String",
     "placeholders": {}
   }
