--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5017,8 +5017,6 @@
   "selectMeaning": "Select the meaning",
   "selectAudio": "Select the matching audio",
   "congratulations": "Congratulations!",
-  "yourResult": "Your results",
-  "addXP": "Add XP",
   "anotherRound": "Another round",
   "ssoDialogTitle": "Waiting for sign in to complete",
   "ssoDialogDesc": "We opened a new tab so you can sign in securely.",
@@ -5027,5 +5025,8 @@
   "disableLanguageToolsDesc": "Would you like to disable automatic language assistance?",
   "recordingPermissionDenied": "Permission denied. Enable recording permissions to record audio messages.",
   "genericWebRecordingError": "Something went wrong. We recommend using the Chrome browser when recording messages.",
-  "screenSizeWarning": "For the best experience using this application, please expand your screen size."
+  "screenSizeWarning": "For the best experience using this application, please expand your screen size.",
+  "noActivityRequest": "No current activity request.",
+  "quit": "Quit",
+  "congratulationsYouveCompletedPractice": "Congratulations! You've completed the practice session."
 }
