--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5008,6 +5008,16 @@
       }
     }
   },
+  "constructUseCorLMDesc": "Correct vocab definition practice",
+  "constructUseIncLMDesc": "Incorrect vocab definition practice",
+  "constructUseCorLADesc": "Correct vocab audio practice",
+  "constructUseIncLADesc": "Incorrect vocab audio practice",
+  "constructUseBonus": "Bonus during vocab practice",
+  "practiceVocab": "Practice vocabulary",
+  "selectMeaning": "Select the meaning",
+  "selectAudio": "Select the matching audio",
+  "congratulations": "Congratulations!",
+  "anotherRound": "Another round",
   "ssoDialogTitle": "Waiting for sign in to complete",
   "ssoDialogDesc": "We opened a new tab so you can sign in securely.",
   "ssoDialogHelpText": "🤔 If you didn't see the new tab, please check your popup blocker.",
@@ -5016,6 +5026,9 @@
   "recordingPermissionDenied": "Permission denied. Enable recording permissions to record audio messages.",
   "genericWebRecordingError": "Something went wrong. We recommend using the Chrome browser when recording messages.",
   "screenSizeWarning": "For the best experience using this application, please expand your screen size.",
+  "noActivityRequest": "No current activity request.",
+  "quit": "Quit",
+  "congratulationsYouveCompletedPractice": "Congratulations! You've completed the practice session.",
   "noSavedActivitiesYet": "Activities will appear here once they are completed and saved.",
   "practiceActivityCompleted": "Practice activity completed",
   "changeCourse": "Change course",
@@ -5026,5 +5039,7 @@
   "announcementsChatDesc": "Only space admin can post.",
   "inOngoingActivity": "You have an ongoing activity!",
   "activitiesToUnlockTopicTitle": "Activities to Unlock Next Topic",
-  "activitiesToUnlockTopicDesc": "Set the number of activities to unlock the next course topic"
+  "activitiesToUnlockTopicDesc": "Set the number of activities to unlock the next course topic",
+  "mustHave10Words" : "You must have at least 10 vocab words to practice them. Try talking to a friend or Pangea Bot to discover more!"
+
 }
